Add styling to Products page

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -1,2 +1,5 @@
-$background: #c1d3e5;
+$background: #e8e8e8;
 $navigationLinks: #ffffff;
+$primaryColor: #564256;
+$secondaryColor: #fc814a;
+$textColor: #242424;
