--- a/src/components/products-page/ProductDetails.module.scss
+++ b/src/components/products-page/ProductDetails.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   text-align: center;
   justify-content: center;
+  padding-bottom: 30px;
 
   .description {
     color: config.$textColor;
