--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     color: #ffffff;
-    background-color: config.$primaryColor;
+    background-color: config.$secondaryColor;
     border-radius: 25px;
     width: 80%;
     height: 70%;
