--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @use "./config";
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,5 +11,5 @@ body {
   font-family: sans-serif;
   background-color: config.$background;
   position: relative;
-  min-height: 100vh;
+  min-height: 100%;
 }
